--- a/src/app/components/private/shared/trainers/trainers-list/trainers-list.component.html
+++ b/src/app/components/private/shared/trainers/trainers-list/trainers-list.component.html
@@ -9,7 +9,7 @@
       <div id="layoutSidenav_content">
         <main>
           <div class="container-fluid px-4">
-            <h2 style="color: black">trainers managment</h2>
+            <h2 style="color: black">Formateur</h2>
   
             <div>
               <button
@@ -18,7 +18,7 @@
                 data-toggle="modal"
                 data-target=".bd-example-modal-sm"
                 routerLink="/add-new-trainer">
-                + add
+                + ajouter
               </button>
   
               <div
@@ -36,15 +36,15 @@
                 <thead>
                   <tr>
                     <th>#</th>
-                    <th>firstname</th>
-                    <th>lastname</th>
+                    <th>prénom</th>
+                    <th>nom</th>
                     <th>email</th>
-                    <th>speciality</th>
-                    <th>years of experience</th>
+                    <th>spécialité</th>
+                    <th>Les années d'expérience</th>
                     <th>facebook</th>
                     <th>instagram</th>
                     <th>twitter</th>
-                    <th>edit</th>
+                    <th>éditer</th>
                   </tr>
                 </thead>
                 <tbody>
