--- a/src/app/components/private/shared/trainings/training-list/training-list.component.html
+++ b/src/app/components/private/shared/trainings/training-list/training-list.component.html
@@ -9,7 +9,7 @@
       <div id="layoutSidenav_content">
         <main>
           <div class="container-fluid px-4">
-            <h2 style="color: black">trainings managment</h2>
+            <h2 style="color: black">Formation</h2>
   
             <div>
               <button
@@ -18,7 +18,7 @@
                 data-toggle="modal"
                 data-target=".bd-example-modal-sm"
                 routerLink="/add-new-training">
-                + add
+                + ajouter
               </button>
   
               <div
@@ -36,13 +36,13 @@
                 <thead>
                   <tr>
                     <th>#</th>
-                    <th>name</th>
+                    <th>nom</th>
                     <th>objectif</th>
-                    <th>program</th>
-                    <th>hours</th>
-                    <th>Trainer</th>
-                    <th>idCategory</th>
-                    <th>edit</th>
+                    <th>programe</th>
+                    <th>Heures</th>
+                    <th>Formateur</th>
+                    <th>Formation</th>
+                    <th>"éditer</th>
                   </tr>
                 </thead>
                 <tbody>
