--- a/src/app/components/private/shared/users/users-list/users-list.component.html
+++ b/src/app/components/private/shared/users/users-list/users-list.component.html
@@ -20,10 +20,10 @@
                             <thead>
                                 <tr>
                                     <th>#</th>
-                                    <th>First name</th>
-                                    <th>Last name</th>
+                                    <th>Prénom</th>
+                                    <th>Nom</th>
                                     <th>Email</th>
-                                    <th>Edit</th>
+                                    <th>éditer</th>
 
                                 </tr>
                             </thead>
