--- a/src/app/components/private/shared/categories/add-category/add-category.component.html
+++ b/src/app/components/private/shared/categories/add-category/add-category.component.html
@@ -7,9 +7,9 @@
     <div id="layoutSidenav_content">
       <main>
           <div class="container-fluid px-4">
-              <h1 class="mt-4">category managment</h1>
+              <h1 class="mt-4">category </h1>
               <ol class="breadcrumb mb-4">
-                  <li class="breadcrumb-item active">add new category</li>
+                  <li class="breadcrumb-item active">Ajouter une nouvelle catégorie</li>
               </ol>
          
           <form [formGroup]="myForm" (ngSubmit)="add()">
@@ -26,7 +26,7 @@
             <div class="input-sec">
               <div class="form-group">
                 <div>
-                  <label for="categoryName " class=" mt-3">category name :</label>
+                  <label for="categoryName " class=" mt-3">Nom de catégorie :</label>
                 </div>
                 <input
                   type="text"
@@ -35,14 +35,14 @@
                   id="categoryName"
                 />
                 <div *ngIf="name?.invalid && name?.touched">
-                  <small *ngIf="name?.errors?.['required']" class="text-danger"><b>name is required</b><br></small>
-                  <small *ngIf="name?.errors?.['minlength']" class="text-danger"><b> invalid name</b><br></small>
+                  <small *ngIf="name?.errors?.['required']" class="text-danger"><b>Le nom est requis</b><br></small>
+                  <small *ngIf="name?.errors?.['minlength']" class="text-danger"><b> nom incorrect</b><br></small>
                 </div>
               </div>
             </div>
             
             
-            <button class="btn btn-primary mt-2" type="submit">add</button>
+            <button class="btn btn-primary mt-2" type="submit">ajouter</button>
           </form>
         </div>
       </main>
