--- a/src/app/components/private/shared/categories/categories-list/categoriesList.component.html
+++ b/src/app/components/private/shared/categories/categories-list/categoriesList.component.html
@@ -9,7 +9,7 @@
     <div id="layoutSidenav_content">
       <main>
         <div class="container-fluid px-4">
-          <h2 style="color: black">category managment</h2>
+          <h2 style="color: black">Catégories </h2>
 
           <div>
             <button
@@ -18,7 +18,7 @@
               data-toggle="modal"
               data-target=".bd-example-modal-sm"
               routerLink="/add-new-category">
-              + add
+              + ajouter
             </button>
 
             <div
@@ -37,8 +37,8 @@
                 <tr>
                   <th>#</th>
                   <th>name</th>
-                  <th>image</th>
-                  <th>edit</th>
+                  <th>Image</th>
+                  <th>Éditer</th>
                 </tr>
               </thead>
               <tbody>
