patch: translate all french

--- a/src/app/components/private/shared/blog/blog-list/blog-list.component.html
+++ b/src/app/components/private/shared/blog/blog-list/blog-list.component.html
@@ -9,7 +9,7 @@
       <div id="layoutSidenav_content">
         <main>
           <div class="container-fluid px-4">
-            <h2 style="color: black">article managment</h2>
+            <h2 style="color: black">article</h2>
   
             <div>
               <button
@@ -18,7 +18,7 @@
                 data-toggle="modal"
                 data-target=".bd-example-modal-sm"
                 routerLink="/add-new-article">
-                + add
+                + ajouter
               </button>
   
               <div
@@ -39,9 +39,8 @@
                     <th>titre</th>
                     <th>image</th>
                     <th>article</th>
-                    <th>created by</th>
-                    <th>since</th>
-                    <th>edit</th>
+                    <th>puisque</th>
+                    <th>éditer</th>
                   </tr>
                 </thead>
                 <tbody>
