--- a/src/app/components/private/shared/messages/message-list/message-list.component.html
+++ b/src/app/components/private/shared/messages/message-list/message-list.component.html
@@ -9,7 +9,7 @@
     <div id="layoutSidenav_content">
       <main>
         <div class="container-fluid px-4">
-          <h2 style="color: black">Message managment</h2>
+          <h2 style="color: black">Les Messages</h2>
 
           <div>
 
@@ -24,10 +24,10 @@
               <thead>
                 <tr>
                   <th>#</th>
-                  <th>Sender</th>
-                  <th>Subject</th>
+                  <th>l'envoyeur</th>
+                  <th>Sujet</th>
 
-                  <th>Edit</th>
+                  <th>éditer</th>
 
                 </tr>
               </thead>
