--- a/src/app/components/private/shared/blog/update-article/update-article.component.html
+++ b/src/app/components/private/shared/blog/update-article/update-article.component.html
@@ -7,9 +7,9 @@
       <div id="layoutSidenav_content">
         <main>
           <div class="container-fluid px-4 ">
-            <h1 class="mt-4">article managment</h1>
+            <h1 class="mt-4">Articles</h1>
             <ol class="breadcrumb mb-4">
-              <li class="breadcrumb-item active">add new article</li>
+              <li class="breadcrumb-item active">Ajouter un nouveau  article</li>
             </ol>
   
             <form [formGroup]="myForm" (ngSubmit)="update()">
@@ -31,23 +31,10 @@
                 </div>
               </div>
               <div class="input-sec">
-                <select
-                  class="form-select mt-3"
-                  formControlName="createdBy"
-                  id="createdBy"
-                  aria-label="Default select example"
-                >
-                  <option selected>Open this select menu</option>
-                  <option
-                    *ngFor="let user of userList; let i = index"
-                    [value]="user._id"
-                  >
-                    {{ user.firstname }} {{ user.lastname }}
-                  </option>
-                </select>
+
                 <div class="form-group">
                   <div>
-                    <label for="articleName " class="mt-3">article titre :</label>
+                    <label for="articleName " class="mt-3">Le titre d'article :</label>
                   </div>
                   <input
                     type="text"
@@ -57,18 +44,18 @@
                   />
                   <div *ngIf="titre?.invalid && titre?.touched">
                     <small *ngIf="titre?.errors?.['required']" class="text-danger"
-                      ><b>titre is required</b><br
+                      ><b>titre est requis</b><br
                     /></small>
                     <small
                       *ngIf="titre?.errors?.['minlength']"
                       class="text-danger"
-                      ><b> invalid titre</b><br
+                      ><b> titre incorrect</b><br
                     /></small>
                   </div>
                 </div>
                 <div class="form-group">
                   <div>
-                    <label for="content " class="mt-3">article content :</label>
+                    <label for="content " class="mt-3">le contenu de l'article :</label>
                   </div>
                   <textarea
                     type="text"
@@ -81,18 +68,18 @@
                     <small
                       *ngIf="content?.errors?.['required']"
                       class="text-danger"
-                      ><b>content is required</b><br
+                      ><b>Contenu est requis</b><br
                     /></small>
                     <small
                       *ngIf="content?.errors?.['minlength']"
                       class="text-danger"
-                      ><b> invalid content</b><br
+                      ><b> Contenu incorrect</b><br
                     /></small>
                   </div>
                 </div>
               </div>
   
-              <button class="btn btn-primary mt-2" type="submit">add</button>
+              <button class="btn btn-primary mt-2" type="submit">Ajouter</button>
             </form>
           </div>
         </main>
