--- a/src/app/components/private/shared/categories/modify-category/modify-category.component.html
+++ b/src/app/components/private/shared/categories/modify-category/modify-category.component.html
@@ -38,7 +38,7 @@
             </div>
             
             
-            <button class="btn btn-primary mt-2" type="submit">modifier</button>
+            <button class="btn btn-primary mt-2" type="submit">Modifier</button>
           </form>
         </div>
       </main>
