--- a/src/app/components/public/article/article.component.html
+++ b/src/app/components/public/article/article.component.html
@@ -26,13 +26,13 @@
   </div>
 </div>
 <!-- Header End -->
-<!-- 
+<!--
 <div class="container-xxl py-5">
   <div class="container">
     <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
       <h1 class="mb-5">{{ article.titre }}</h1>
       <div class="article-image ">
-        <img class="image" src="http://localhost:3000/{{ article.image }}" alt="" />
+        <img class="image" src="{{baseUrl}}{{ article.image }}" alt="" />
       </div>
         <div class="published">
             <i class="fa-solid fa-calendar-days date mt-2"></i><small class="m-2 date">{{ article.createdAt.substring(0, 10) }}</small>
@@ -41,7 +41,6 @@
     </div>
   </div>
 </div> -->
-
 <!-- ======= Blog Single Section ======= -->
 <section id="blog" class="blog">
   <div class="container" data-aos="fade-up">
@@ -49,26 +48,20 @@
       <div class="col-lg-8 entries">
         <article class="entry entry-single">
           <div class="entry-img mb-2">
-            <img src="http://localhost:3000/{{ article.image }}" alt="" class="img-fluid " />
+            <img src="{{baseUrl}}{{ article.image }}" alt="" class="img-fluid " />
           </div>
-
           <h2 class="entry-title">
-            <a href="blog-single.html"
-              >{{ article.titre }}</a
-            >
+            <a href="blog-single.html">{{ article.titre }}</a>
           </h2>
-
           <div class="entry-meta">
             <ul>
               <li class="d-flex align-items-center">
                 <i class="bi bi-clock"></i>
-                <a href="blog-single.html"
-                  ><time datetime="2020-01-01">{{ article.createdAt.substring(0, 10) }}</time></a
-                >
+                <a href="blog-single.html"><time datetime="2020-01-01">{{ article.createdAt.substring(0, 10)
+                    }}</time></a>
               </li>
             </ul>
           </div>
-
           <div class="entry-content">
             <p>
               {{ article.content }}
@@ -86,22 +79,16 @@
             </form>
           </div>
           <!-- End sidebar search formn-->
-
           <!-- End sidebar categories-->
-
           <h3 class="sidebar-title">Recent Posts</h3>
           <div class="sidebar-item recent-posts">
             <div *ngFor="let recentArticle of articleList" class="post-item clearfix">
-              <img src="http://localhost:3000/{{ recentArticle.image }}" alt="" />
+              <img src="{{baseUrl}}{{ recentArticle.image }}" alt="" />
               <h4>
-                <a (click)="single(recentArticle._id)"
-                  >{{recentArticle.titre}}</a
-                >
+                <a (click)="single(recentArticle._id)">{{recentArticle.titre}}</a>
               </h4>
               <time datetime="2020-01-01">{{ moment(recentArticle.createdAt) }}</time>
             </div>
-
-            
           </div>
           <!-- End sidebar recent posts-->
         </div>
