--- a/src/app/components/public/trainer-item/trainer-item.component.html
+++ b/src/app/components/public/trainer-item/trainer-item.component.html
@@ -1,19 +1,19 @@
 <div class="team-item bg-light">
-    <div class="overflow-hidden">
-        <img class="img-fluid trainer-img" src="http://localhost:3000/{{image}}" alt="">
+  <div class="overflow-hidden">
+    <img class="img-fluid trainer-img" src="{{baseUrl}}{{image}}" alt="">
+  </div>
+  <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
+    <div class="bg-light d-flex justify-content-center pt-2 px-1">
+      <a *ngIf="facebook" class="btn btn-sm-square btn-primary mx-1" href="{{facebook}}"><i
+          class="fab fa-facebook-f"></i></a>
+      <a *ngIf="instagram" class="btn btn-sm-square btn-primary mx-1" href="{{instagram}}"><i
+          class="fab fa-instagram"></i></a>
+      <a *ngIf="twitter" class="btn btn-sm-square btn-primary mx-1" href="{{twitter}}"><i
+          class="fab fa-twitter"></i></a>
     </div>
-    <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
-        <div class="bg-light d-flex justify-content-center pt-2 px-1">
-            <a *ngIf="facebook" class="btn btn-sm-square btn-primary mx-1" href="{{facebook}}"><i
-                    class="fab fa-facebook-f"></i></a>
-            <a *ngIf="instagram" class="btn btn-sm-square btn-primary mx-1" href="{{instagram}}"><i
-                    class="fab fa-instagram"></i></a>
-            <a *ngIf="twitter" class="btn btn-sm-square btn-primary mx-1" href="{{twitter}}"><i
-                    class="fab fa-twitter"></i></a>
-        </div>
-    </div>
-    <div class="text-center p-4  description">
-        <h5 class="mb-0">{{firstname}} {{lastname}}</h5>
-        <small>{{speciality}}</small>
-    </div>
+  </div>
+  <div class="text-center p-4  description">
+    <h5 class="mb-0">{{firstname}} {{lastname}}</h5>
+    <small>{{speciality}}</small>
+  </div>
 </div>
