patch: enhance ui dashbaord

--- a/src/app/components/private/shared/blog/add-article/add-article.component.html
+++ b/src/app/components/private/shared/blog/add-article/add-article.component.html
@@ -76,7 +76,7 @@
                   /></small>
                 </div>
               </div>
-              <button class="btn btn-primary mt-2" type="submit">Modifier</button>
+              <button class="btn btn-primary mt-2" type="submit">Ajouter</button>
             </div>
 
            
