--- a/src/app/components/private/shared/blog/add-article/add-article.component.scss
+++ b/src/app/components/private/shared/blog/add-article/add-article.component.scss
@@ -1,6 +1,7 @@
 .article-image{
-    width: 90% !important;
+    width: 100% !important;
     height: 300px;
+    object-fit: cover;
 }
 .article-input{
     width: 100%;
