--- a/src/app/components/private/shared/blog/update-article/update-article.component.html
+++ b/src/app/components/private/shared/blog/update-article/update-article.component.html
@@ -9,7 +9,7 @@
           <div class="container-fluid px-4 ">
             <h1 class="mt-4">Articles</h1>
             <ol class="breadcrumb mb-4">
-              <li class="breadcrumb-item active">Ajouter un nouveau  article</li>
+              <li class="breadcrumb-item active">Modiifer l'article</li>
             </ol>
   
             <form [formGroup]="myForm" (ngSubmit)="update()">
@@ -79,7 +79,7 @@
                 </div>
               </div>
   
-              <button class="btn btn-primary mt-2" type="submit">Ajouter</button>
+              <button class="btn btn-primary mt-2" type="submit">Modifier</button>
             </form>
           </div>
         </main>
