--- a/src/app/components/private/shared/trainers/add-trainer/add-trainer.component.html
+++ b/src/app/components/private/shared/trainers/add-trainer/add-trainer.component.html
@@ -96,7 +96,7 @@
 
 
 
-            <button class="btn btn-primary mt-2" type="submit">add</button>
+            <button class="btn btn-primary mt-2" type="submit">Ajouter</button>
           </form>
         </div>
       </main>
