--- a/src/app/components/private/shared/blog/blog-list/blog-list.component.html
+++ b/src/app/components/private/shared/blog/blog-list/blog-list.component.html
@@ -35,7 +35,7 @@
                   <td>{{ i + 1 }}</td>
                   <td>{{ article.titre }}</td>
                   <td>
-                    <img src="{{baseUrl}}{{ article.image }}" class="image-fluid article-image" alt="" />
+                    <img src="{{baseUrl}}/{{ article.image }}" class="image-fluid article-image" alt="" />
                   </td>
                   <td>{{ article.content.substring(0,70) }}...</td>
                   <td>{{ moment(article.createdAt) }}</td>
