--- a/src/app/components/private/shared/categories/add-category/add-category.component.css
+++ b/src/app/components/private/shared/categories/add-category/add-category.component.css
@@ -2,6 +2,7 @@
 .category-image{
     width: 100% !important;
     height: 300px;
+    object-fit: cover;
 }
 .category-input{
     width: 100%;
@@ -10,6 +11,4 @@
     width: 100%;
 }
 
-button{
-    width: 100%;
-}
+
