--- a/src/app/components/private/shared/categories/categories-list/categoriesList.component.html
+++ b/src/app/components/private/shared/categories/categories-list/categoriesList.component.html
@@ -6,15 +6,25 @@
     <div id="layoutSidenav_content">
       <main>
         <div class="container-fluid px-4">
-          <h2 style="color: black">Catégories </h2>
+          <h2 style="color: black">Catégories</h2>
 
           <div>
-            <button type="button" class="btn btn-primary mb-3" data-toggle="modal" data-target=".bd-example-modal-sm"
-              routerLink="/add-new-category">
+            <button
+              type="button"
+              class="btn btn-primary mb-3"
+              data-toggle="modal"
+              data-target=".bd-example-modal-sm"
+              routerLink="/add-new-category"
+            >
               + ajouter
             </button>
-            <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel"
-              aria-hidden="true">
+            <div
+              class="modal fade bd-example-modal-sm"
+              tabindex="-1"
+              role="dialog"
+              aria-labelledby="mySmallModalLabel"
+              aria-hidden="true"
+            >
               <div class="modal-dialog modal-sm">
                 <div class="modal-content">...</div>
               </div>
@@ -23,7 +33,7 @@
               <thead>
                 <tr>
                   <th>#</th>
-                  <th>name</th>
+                  <th>Nom</th>
                   <th>Image</th>
                   <th>Éditer</th>
                 </tr>
@@ -33,12 +43,27 @@
                   <td>{{ i + 1 }}</td>
                   <td>{{ category.name }}</td>
                   <td>
-                    <img src="{{baseUrl}}{{ category.image }}" class="image-fluid category-image" alt="" />
+                    <img
+                      src="{{ baseUrl }}{{ category.image }}"
+                      class="image-fluid category-image"
+                      alt=""
+                    />
                   </td>
                   <td>
-                    <button class="btn btn-warning mx-2" [routerLink]="['/modify-category', category._id]">
-                      <i class="fa fa-pencil" style="color: white" aria-hidden="true"></i></button><button
-                      class="btn btn-danger mx-2" style="color: white" (click)="delete(category._id, i)">
+                    <button
+                      class="btn btn-warning mx-2"
+                      [routerLink]="['/modify-category', category._id]"
+                    >
+                      <i
+                        class="fa fa-pencil"
+                        style="color: white"
+                        aria-hidden="true"
+                      ></i></button
+                    ><button
+                      class="btn btn-danger mx-2"
+                      style="color: white"
+                      (click)="delete(category._id, i)"
+                    >
                       <i class="fa fa-trash" aria-hidden="true"></i>
                     </button>
                   </td>
