patch:enhance shaboard ui

--- a/src/app/components/private/shared/top-bar/top-bar.component.html
+++ b/src/app/components/private/shared/top-bar/top-bar.component.html
@@ -1,9 +1,8 @@
     <!-- TOPBAR -->
-    <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark ">
+    <nav class="sb-topnav navbar navbar-expand navbar-dark bg ">
         <!-- Navbar Brand-->
         <a class="navbar-brand ps-3" routerLink="/dashboard"><img src="assets/img/5.png" alt="">
         </a>
-
 
         <!-- Navbar-->
         <div class="ms-auto">
