--- a/src/app/components/private/shared/categories/add-category/add-category.component.html
+++ b/src/app/components/private/shared/categories/add-category/add-category.component.html
@@ -7,7 +7,7 @@
     <div id="layoutSidenav_content">
       <main>
           <div class="container-fluid px-4">
-              <h1 class="mt-4">category </h1>
+              <h1 class="mt-4">Catégories </h1>
               <ol class="breadcrumb mb-4">
                   <li class="breadcrumb-item active">Ajouter une nouvelle catégorie</li>
               </ol>
