--- a/src/app/components/private/shared/messages/message-list/message-list.component.scss
+++ b/src/app/components/private/shared/messages/message-list/message-list.component.scss
@@ -39,13 +39,13 @@ h2 {
 
 .fl-table thead th {
   color: #ffffff;
-  background: #4FC3A1;
+  background: #312783;
 }
 
 
 .fl-table thead th:nth-child(odd) {
   color: #ffffff;
-  background: #324960;
+  background: #008bd2;
 }
 
 .fl-table tr:nth-child(even) {
