--- a/src/app/components/private/shared/side-bar/side-bar.component.html
+++ b/src/app/components/private/shared/side-bar/side-bar.component.html
@@ -1,10 +1,10 @@
 <!-- SIDEBAR -->
 <div id="layoutSidenav_nav">
-  <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
+  <nav class="sb-sidenav accordion sb-sidenav-dark  bg"  id="sidenavAccordion">
     <div class="sb-sidenav-menu">
       <div class="nav">
         <div class="sb-sidenav-menu-heading">menu</div>
-        <a class="nav-link" routerLink="/dashboard">
+        <a class="nav-link my-2" routerLink="/dashboard">
           <div class="sb-nav-link-icon">
             <i class="fas fa-tachometer-alt"></i>
           </div>
@@ -45,9 +45,6 @@
           Messages
         </a>
       </div>
-    </div>
-    <div class="sb-sidenav-footer">
-      <div class="small">connecté en tant que:</div>
     </div>
   </nav>
 </div>
